adjust fingerprint module to revamped scheduling structure